Django REST Framework extension was added!

--- a/FishJoy/spots/static/spots/css/style.css
+++ b/FishJoy/spots/static/spots/css/style.css
@@ -436,7 +436,7 @@ p.searched-data {
 
 nav.pagination {
     text-align: center;
-	margin: 0 0 20px 0;
+	margin: 0 0 20px 200px;
     user-select: none;
 }
 
