--- a/FishJoy/spots/templates/spots/about.html
+++ b/FishJoy/spots/templates/spots/about.html
@@ -7,7 +7,8 @@
     spot, fish on this spot and of course the best baits for fish that you want to catch.</p>
 <p class="about">You can divide fish and spots on particular categories, like peaceful or predatory, river or lake respectively etc.</p>
 <p class="about">If you have something to share or offer, you can easily do that by filling the form. Note, if you do a mistake and<br>
-    want to change it, inform administration by texting on romanromapev@gmail.com.<br>
+    want to change it, just open your post, and press the button 'edit/delete'.<br>
+    For any questions or suggestions: romanromapev@gmail.com<br>
     <font color="red">Important:</font> you have to be authorized to fill the form!
 </p>
 {% endblock %}
