--- a/FishJoy/spots/templates/spots/show_baits.html
+++ b/FishJoy/spots/templates/spots/show_baits.html
@@ -1,5 +1,11 @@
 {% extends 'spots/base.html' %}
 
+{% block sidebar %}
+    <header>Export</header>
+    <li><a href="{% url 'baits_xml_export' %}">Get XML</a></li>
+    <li><a href="{% url 'baits_xlsx_export' %}">Get XLSX</a></li>
+{% endblock %}
+
 {% block add %}<a href="{% url 'add_bait' %}">Add bait</a>{% endblock %}
 
 {% block content %}
@@ -15,9 +21,9 @@
             <p><img class="article-image" src="{{ b.photo.url }}" alt="Bait photo"></p>
             {% if request.user.is_authenticated %}
                 {% if request.user.is_superuser or object.user == request.user %}
-                    <p class="edit"><a href="{{ b.get_edit_url }}">Edit</a></p>
+                    <p class="edit"><a href="{{ b.get_edit_url }}">Edit / Delete</a></p>
                 {% else %}
-                    <p class="edit"><a href="{% url 'login' %}">Login from admin or owner of this post to edit!</a></p>
+                    <p class="edit"><a href="{% url 'login' %}">Login from admin or owner of this post to edit / delete!</a></p>
                 {% endif %}
             {% else %}
                 <p class="edit"><a href="{% url 'login' %}">Login to edit!</a></p>
