Superusers and admin can make SQL queries to DB on web page

--- a/FishJoy/spots/static/spots/css/style.css
+++ b/FishJoy/spots/static/spots/css/style.css
@@ -1,5 +1,6 @@
 @import url('/static/weather/css/style.css');
 @import url('/static/map/css/style.css');
+@import "query_tool.css";
 
 * {
     margin: 0;
